feat() add card and menu components, add libs

--- a/apps/apm-ssr/src/index.html
+++ b/apps/apm-ssr/src/index.html
@@ -14,11 +14,13 @@
     type="image/x-icon"
     href="favicon.ico"
   >
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
   <app-root></app-root>
-  <svg:svg
+  <svg
     xmlns="http://www.w3.org/2000/svg"
     version="1.1"
   >
@@ -42,7 +44,7 @@
         />
       </filter>
     </defs>
-  </svg:svg>
+  </svg>
 </body>
 
 </html>
